# VEX

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/vex-cache/: Cargo.toml
crates/vex-cache/src/: lib.rs  store.rs
crates/vex-cli/: Cargo.toml
crates/vex-cli/src/: main.rs
crates/vex-core/: Cargo.toml
crates/vex-core/src/: config.rs  engine.rs  error.rs  fingerprint.rs  graph.rs  lib.rs  task.rs
crates/vex-server/: Cargo.toml
crates/vex-server/src/: main.rs
examples/: vex.toml
