[package]
name = "vex-cache"
description = "Persistent SQLite-backed cache for vex"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
vex-core = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
