[package]
name = "vex-core"
description = "Core build graph engine for vex"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
petgraph = { workspace = true }
rayon = { workspace = true }
walkdir = { workspace = true }
ignore = { workspace = true }
toml = { workspace = true }
dashmap = { workspace = true }
num_cpus = { workspace = true }
